# cost-calculator

./: .gitignore  CMakeLists.txt  README.md  calculations.h  calls.h  contractor-calculator-instance.cpp  contractor-calculator-instance.h  file_controller.h  utils.h
backend/: console_db_writer.py  requirements.txt  server.py  store.db
backend/calculated/: PrismaticServicesoutput.csv
backend/controllers/: auth.py  checks.py  db.py  utils.py
backend/storage/ExampleContractorOne/: Buses and Drivers.csv  Daily Bus Routes.csv  Management Payment Scale.csv  PVA Table.csv
backend/storage/PrismaticServices/: Daily Bus Routes.csv  Driver Payment Scale.csv  Maintenance Payment Scale.csv
frontend/: next.config.ts  package.json
frontend/app/: ClientLayout.tsx  ToastMessage.tsx  globals.css  layout.tsx  page.tsx
frontend/app/edit/: fetch_data.ts  page.tsx
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/upload/: page.tsx
server/: app.py  dbmanager.py  helpers.py
